# laby

./: 6лаба.txt  9_lab.xlsx  LABA-триг.txt  SQLQuery2.sql  lab.txt  lab20.py  Ошибки.txt  лаб.txt
10lab/: Normalizatsia_2.xlsx
3_lab_bd/: 3lab.sql  3lab.xlsx  STUDENTS.txt  script_3lab.txt
3_lab_bd/3lab/: Laboratornaya_rabota_3.sql
3lab/: 3lab.ssmssln  kafemenuTaze.sql
9lab/: Normalizatsia_1_2.xlsx
AnalizDannyh/: InfantMort (Автосохраненный).xlsx  InfantMort_Анализ_Данных_Аманова_Айджемал_ИБ_19.xlsx  ex01(0) (1).xlsx  Анализ_Данных_Аманова_Айджемал_ИБ_19lab1.xlsx
chernolvanov/: Achievements.php  Courses.php  call.php  gall.php  index.php  portfolio.php  publ.php  ty2014.php  ty2015.php  ty2017.php  workp.php
chernolvanov/blocks/: footer.php  form.php  header.php  headerL.php  news.php  slider.php  start.php
chernolvanov/files/: Esse_Chernoivanova.docx  Konspekt_uroka_s_tselevymi_komponentami.docx  Kontseptsia_Chernoivanova_pptx.pptx  Metodichka_Chernoivanova_2016_NGSr.doc  esse_2015.docx  kontseptsia_Chernoivanova_2003.ppt  plan_uroka.docx
chernolvanov/lib/: functions.php
collection_date/: Analiz_zadachi.md  Сбор данных.py
lab12_14/: config.py  data.xls  data.xml  forms.py  requirements.txt
lab12_14/app/: __init__.py  models.py  views.py
lab5/: Cargo.toml  build.rs
lab5/LAB5/: Form1.Designer.cs  Form1.cs  LAB5.csproj  LAB5.sln
lab5/LAB5/Properties/: AssemblyInfo.cs
lab5/src/: lib.rs
web/zad_1/: main.html  page_2.html  page_3.html
web/zad_2/: главная.html  главная.txt
Новые лабы/Lab7Seria/: Seria.sln
(+58 files in other folders)
