[package]
name = "lab5"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
windows = "0.6.0"

[build-dependencies]
windows = "0.6.0"

[lib]
crate-type = ["cdylib"]